--- a/modelica-mingw-win64.ini
+++ b/modelica-mingw-win64.ini
@@ -1,6 +1,9 @@
 [built-in options]
 default_library = 'static'
 
+[cnpy:built-in options]
+default_library = 'static'
+
 [constants]
 toolchain = 'C:\\Program Files\\OpenModelica1.17.0-64bit\\tools\\msys\\mingw64\\bin'
 
