--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
 				"command": "meson compile"
 			},
 			"options": {
-				"cwd": "${workspaceFolder}/build_w64_release"
+				"cwd": "${workspaceFolder}/build_release"
 			},
 			"problemMatcher": "$gcc",
 			"group": {
@@ -29,7 +29,7 @@
 				"command": "meson compile"
 			},
 			"options": {
-				"cwd": "${workspaceFolder}/build_w64_debug"
+				"cwd": "${workspaceFolder}/build_debug"
 			},
 			"problemMatcher": "$gcc",
 			"group": "build"
@@ -40,8 +40,11 @@
 			"windows": {
 				"command": "meson install"
 			},
+			"linux": {
+				"command": "meson install"
+			},
 			"options": {
-				"cwd": "${workspaceFolder}/build_w64_release"
+				"cwd": "${workspaceFolder}/build_release"
 			},
 			"problemMatcher": "$gcc"
 		},
